[gd_scene load_steps=10 format=4 uid="uid://b0dkdpyli1b8f"]

[ext_resource type="Script" path="res://scripts/observation_minigame.gd" id="1_5o853"]
[ext_resource type="TileSet" uid="uid://bhw4bxuqfh87o" path="res://assets/1bitplatformerpack/platforming_tileset.tres" id="1_n0frr"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="2_6vnlc"]
[ext_resource type="PackedScene" uid="uid://bunhgvsiea5b3" path="res://scenes/observation_target.tscn" id="3_j70ae"]
[ext_resource type="Script" path="res://scripts/observation_question_label.gd" id="5_hrh6m"]
[ext_resource type="PackedScene" uid="uid://b80wisqol6ds5" path="res://scenes/observation_button.tscn" id="5_m6boq"]
[ext_resource type="FontFile" uid="uid://cm8dnumwsttrn" path="res://assets/fonts/Silkscreen/slkscr.ttf" id="5_ryn2k"]
[ext_resource type="PackedScene" uid="uid://bgwqpaqgk52bi" path="res://scenes/countdown_label.tscn" id="7_rbhsb"]
[ext_resource type="PackedScene" uid="uid://daybuxnjj7tm5" path="res://scenes/luck_label.tscn" id="8_etsfv"]

[node name="ObservationMinigame" type="Node2D" node_paths=PackedStringArray("observation_buttons")]
script = ExtResource("1_5o853")
observation_buttons = [NodePath("ObservationButtons/ObservationButton1"), NodePath("ObservationButtons/ObservationButton2"), NodePath("ObservationButtons/ObservationButton3"), NodePath("ObservationButtons/ObservationButton4")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADu/wkAAQAKABAAAAAQAAkAAQALABAAAAARAAkAAQAMABAAAADv/wkAAQALABAAAADw/wkAAQALABAAAADx/wkAAQALABAAAADy/wkAAQALABAAAADz/wkAAQALABAAAAD0/wkAAQALABAAAAD1/wkAAQALABAAAAD2/wkAAQALABAAAAD3/wkAAQALABAAAAD4/wkAAQALABAAAAD5/wkAAQALABAAAAD6/wkAAQALABAAAAD7/wkAAQALABAAAAD8/wkAAQALABAAAAD9/wkAAQALABAAAAD+/wkAAQALABAAAAD//wkAAQALABAAAAAAAAkAAQALABAAAAABAAkAAQALABAAAAACAAkAAQALABAAAAADAAkAAQALABAAAAAEAAkAAQALABAAAAAFAAkAAQALABAAAAAGAAkAAQALABAAAAAHAAkAAQALABAAAAAIAAkAAQALABAAAAAJAAkAAQALABAAAAAKAAkAAQALABAAAAALAAkAAQALABAAAAAMAAkAAQALABAAAAANAAkAAQALABAAAAAOAAkAAQALABAAAAAPAAkAAQALABAAAADw//f/AQARABEAAAAPAPf/AQATABEAAAAPAAMAAQATABMAAADw/wMAAQARABMAAADw//j/AQARABIAAADw//n/AQARABIAAADw//r/AQARABIAAADw//v/AQARABIAAADw//z/AQARABIAAADw//3/AQARABIAAADw//7/AQARABIAAADw////AQARABIAAADw/wAAAQARABIAAADw/wEAAQARABIAAADw/wIAAQARABIAAADx/wMAAQASABMAAADy/wMAAQASABMAAADz/wMAAQASABMAAAD0/wMAAQASABMAAAD1/wMAAQASABMAAAD2/wMAAQASABMAAAD3/wMAAQASABMAAAD4/wMAAQASABMAAAD5/wMAAQASABMAAAD6/wMAAQASABMAAAD7/wMAAQASABMAAAD8/wMAAQASABMAAAD9/wMAAQASABMAAAD+/wMAAQASABMAAAD//wMAAQASABMAAAAAAAMAAQASABMAAAABAAMAAQASABMAAAACAAMAAQASABMAAAADAAMAAQASABMAAAAEAAMAAQASABMAAAAFAAMAAQASABMAAAAGAAMAAQASABMAAAAHAAMAAQASABMAAAAIAAMAAQASABMAAAAJAAMAAQASABMAAAAKAAMAAQASABMAAAALAAMAAQASABMAAAAMAAMAAQASABMAAAANAAMAAQASABMAAAAOAAMAAQASABMAAAAPAPj/AQATABIAAAAPAPn/AQATABIAAAAPAPr/AQATABIAAAAPAPv/AQATABIAAAAPAPz/AQATABIAAAAPAP3/AQATABIAAAAPAP7/AQATABIAAAAPAP//AQATABIAAAAPAAAAAQATABIAAAAPAAEAAQATABIAAAAPAAIAAQATABIAAADx//f/AQASABEAAADy//f/AQASABEAAADz//f/AQASABEAAAD0//f/AQASABEAAAD1//f/AQASABEAAAD2//f/AQASABEAAAD3//f/AQASABEAAAD4//f/AQASABEAAAD5//f/AQASABEAAAD6//f/AQASABEAAAD7//f/AQASABEAAAD8//f/AQASABEAAAD9//f/AQASABEAAAD+//f/AQASABEAAAD///f/AQASABEAAAAAAPf/AQASABEAAAABAPf/AQASABEAAAACAPf/AQASABEAAAADAPf/AQASABEAAAAEAPf/AQASABEAAAAFAPf/AQASABEAAAAGAPf/AQASABEAAAAHAPf/AQASABEAAAAIAPf/AQASABEAAAAJAPf/AQASABEAAAAKAPf/AQASABEAAAALAPf/AQASABEAAAAMAPf/AQASABEAAAANAPf/AQASABEAAAAOAPf/AQASABEAAADu//b/AQAAAAAAAADv//b/AQAAAAAAAADw//b/AQAAAAAAAADx//b/AQAAAAAAAADu//X/AQAAAAAAAADv//X/AQAAAAAAAADw//X/AQAAAAAAAADx//X/AQAAAAAAAADy//X/AQAAAAAAAADz//X/AQAAAAAAAAD0//X/AQAAAAAAAAD1//X/AQAAAAAAAAD2//X/AQAAAAAAAAD3//X/AQAAAAAAAAD4//X/AQAAAAAAAAD5//X/AQAAAAAAAAD6//X/AQAAAAAAAAD7//X/AQAAAAAAAAD8//X/AQAAAAAAAAD9//X/AQAAAAAAAAD+//X/AQAAAAAAAAD///X/AQAAAAAAAAAAAPX/AQAAAAAAAAABAPX/AQAAAAAAAAACAPX/AQAAAAAAAAADAPX/AQAAAAAAAAAEAPX/AQAAAAAAAAAFAPX/AQAAAAAAAAAGAPX/AQAAAAAAAAAHAPX/AQAAAAAAAAAIAPX/AQAAAAAAAAAJAPX/AQAAAAAAAAAKAPX/AQAAAAAAAAALAPX/AQAAAAAAAAAMAPX/AQAAAAAAAAANAPX/AQAAAAAAAAAOAPX/AQAAAAAAAAARAPX/AQAAAAAAAAASAPX/AQASABIAAAASAPb/AQASABIAAAARAPb/AQAAAAAAAAAQAPb/AQAAAAAAAAAPAPb/AQAAAAAAAAAQAPX/AQAAAAAAAAAPAPX/AQAAAAAAAADt//X/AQASABIAAADt//b/AQASABIAAADy//b/AQAAAAAAAADz//b/AQAAAAAAAAD0//b/AQAAAAAAAAD1//b/AQAAAAAAAAD2//b/AQAAAAAAAAD3//b/AQAAAAAAAAD4//b/AQAAAAAAAAD5//b/AQAAAAAAAAD6//b/AQAAAAAAAAD7//b/AQAAAAAAAAD8//b/AQAAAAAAAAD9//b/AQAAAAAAAAD+//b/AQAAAAAAAAD///b/AQAAAAAAAAAAAPb/AQAAAAAAAAABAPb/AQAAAAAAAAACAPb/AQAAAAAAAAADAPb/AQAAAAAAAAAEAPb/AQAAAAAAAAAFAPb/AQAAAAAAAAAGAPb/AQAAAAAAAAAHAPb/AQAAAAAAAAAIAPb/AQAAAAAAAAAJAPb/AQAAAAAAAAAKAPb/AQAAAAAAAAALAPb/AQAAAAAAAAAMAPb/AQAAAAAAAAANAPb/AQAAAAAAAAAOAPb/AQAAAAAAAADt//f/AQASABIAAADt//j/AQASABIAAADt//n/AQASABIAAADu//f/AQAAAAAAAADu//j/AQAAAAAAAADu//n/AQAAAAAAAADu//r/AQAAAAAAAADu//v/AQAAAAAAAADv//f/AQAAAAAAAADv//j/AQAAAAAAAADv//n/AQAAAAAAAADv//r/AQAAAAAAAADv//v/AQAAAAAAAADv//z/AQAAAAAAAADv//3/AQAAAAAAAADv//7/AQAAAAAAAADv////AQAAAAAAAADv/wAAAQAAAAAAAADv/wEAAQAAAAAAAADv/wIAAQAAAAAAAADv/wMAAQAAAAAAAADv/wQAAQAAAAAAAADv/wUAAQAAAAAAAADv/wYAAQAAAAAAAADv/wcAAQAAAAAAAADu/wcAAQAAAAAAAADu/wgAAQAAAAAAAADv/wgAAQADAAsAAADu/wYAAQAAAAAAAADu/wUAAQAAAAAAAADu/wQAAQAAAAAAAADu/wMAAQAAAAAAAADu/wIAAQAAAAAAAADu/wEAAQAAAAAAAADu/wAAAQAAAAAAAADu////AQAAAAAAAADu//7/AQAAAAAAAADu//3/AQAAAAAAAADu//z/AQAAAAAAAADt//r/AQASABIAAADt//v/AQASABIAAADt//z/AQASABIAAADt//3/AQASABIAAADt//7/AQASABIAAADt////AQASABIAAADt/wAAAQASABIAAADt/wEAAQASABIAAADt/wIAAQASABIAAADt/wMAAQASABIAAADt/wQAAQASABIAAADt/wUAAQASABIAAADt/wYAAQASABIAAADt/wcAAQASABIAAADt/wgAAQASABIAAADt/wkAAQASABIAAADt/woAAQASABIAAADu/woAAQAAAAAAAADv/woAAQAAAAAAAADw/woAAQAAAAAAAADx/woAAQAAAAAAAADy/woAAQAAAAAAAADz/woAAQAAAAAAAAD0/woAAQAAAAAAAAD1/woAAQAAAAAAAAD2/woAAQAAAAAAAAD3/woAAQAAAAAAAAD4/woAAQAAAAAAAAD5/woAAQAAAAAAAAD6/woAAQAAAAAAAAD7/woAAQAAAAAAAAD8/woAAQAAAAAAAAD9/woAAQAAAAAAAAD+/woAAQAAAAAAAAD//woAAQAAAAAAAAAAAAoAAQAAAAAAAAABAAoAAQAAAAAAAAACAAoAAQAAAAAAAAADAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAARAAoAAQAAAAAAAAASAAoAAQASABIAAAASAAkAAQASABIAAAASAAgAAQASABIAAAASAAcAAQASABIAAAASAAYAAQASABIAAAASAAUAAQASABIAAAASAPf/AQASABIAAAASAPj/AQASABIAAAASAPn/AQASABIAAAASAPr/AQASABIAAAASAPv/AQASABIAAAASAPz/AQASABIAAAASAP3/AQASABIAAAASAP7/AQASABIAAAASAP//AQASABIAAAASAAAAAQASABIAAAASAAEAAQASABIAAAASAAIAAQASABIAAAASAAMAAQASABIAAAASAAQAAQASABIAAAAQAPf/AQAAAAAAAAAQAPj/AQAAAAAAAAAQAPn/AQAAAAAAAAAQAPr/AQAAAAAAAAAQAPv/AQAAAAAAAAAQAPz/AQAAAAAAAAAQAP3/AQAAAAAAAAAQAP7/AQAAAAAAAAAQAP//AQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAARAAQAAQAAAAAAAAARAAMAAQAAAAAAAAARAAIAAQAAAAAAAAARAAEAAQAAAAAAAAARAAAAAQAAAAAAAAARAP//AQAAAAAAAAARAP7/AQAAAAAAAAARAP3/AQAAAAAAAAARAPz/AQAAAAAAAAARAPv/AQAAAAAAAAARAPr/AQAAAAAAAAARAPn/AQAAAAAAAAARAPj/AQAAAAAAAAARAPf/AQAAAAAAAAAQAAUAAQAAAAAAAAAPAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAADAAQAAQAAAAAAAAACAAQAAQAAAAAAAAABAAQAAQAAAAAAAAAAAAQAAQAAAAAAAAD//wQAAQAAAAAAAAD+/wQAAQAAAAAAAAD9/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD5/wQAAQAAAAAAAAD4/wQAAQAAAAAAAAD3/wQAAQAAAAAAAAD2/wQAAQAAAAAAAAD1/wQAAQAAAAAAAAD0/wQAAQAAAAAAAADz/wQAAQAAAAAAAADy/wQAAQAAAAAAAADx/wQAAQAAAAAAAADw/wQAAQAFABAAAADw/wUAAQAFABAAAADw/wYAAQAFABEAAADx/wYAAQAAAAAAAADy/wYAAQAAAAAAAADz/wUAAQAAAAAAAAD0/wUAAQAAAAAAAAD1/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD3/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD8/wUAAQAAAAAAAAD9/wUAAQAAAAAAAAD+/wUAAQAAAAAAAAD//wUAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAUAAQAAAAAAAAACAAUAAQAAAAAAAAADAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAAPAAUAAQAAAAAAAAARAAUAAQAAAAAAAAANAAUAAQAAAAAAAAAMAAUAAQAAAAAAAAALAAUAAQAAAAAAAAAKAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAADy/wUAAQAAAAAAAADx/wUAAQAAAAAAAADw/wgAAQADAAsAAADx/wgAAQADAAsAAADy/wgAAQAEAAsAAADz/wgAAQADAAsAAAD2/wgAAQAAAAAAAAD5/wgAAQAAAAAAAAD6/wgAAQAAAAAAAAD7/wgAAQAAAAAAAAD9/wgAAQAAAAAAAAD+/wgAAQAAAAAAAAABAAgAAQAAAAAAAAACAAgAAQAAAAAAAAAEAAgAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAMAAgAAQAAAAAAAAANAAgAAQAAAAAAAAAPAAgAAQASAAEAAAAQAAgAAQAPAAEAAAARAAgAAQAAAAAAAAARAAcAAQAAAAAAAAARAAYAAQAAAAAAAAAQAAYAAQAAAAAAAAAPAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAANAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAALAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAACAAYAAQAAAAAAAAABAAYAAQAAAAAAAAAAAAYAAQAAAAAAAAD//wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD4/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD2/wYAAQAAAAAAAAD1/wYAAQAAAAAAAAD0/wYAAQAAAAAAAADz/wYAAQAAAAAAAADw/wcAAQAAAAAAAADx/wcAAQAAAAAAAADy/wcAAQAAAAAAAADz/wcAAQAAAAAAAAD0/wcAAQAAAAAAAAD1/wcAAQAAAAAAAAD2/wcAAQAAAAAAAAD3/wcAAQAAAAAAAAD4/wcAAQAAAAAAAAD5/wcAAQAAAAAAAAD6/wcAAQAAAAAAAAD7/wcAAQAAAAAAAAD8/wcAAQAAAAAAAAD9/wcAAQAAAAAAAAD+/wcAAQAAAAAAAAD//wcAAQAAAAAAAAAAAAcAAQAAAAAAAAABAAcAAQAAAAAAAAACAAcAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAcAAQAAAAAAAAANAAcAAQAAAAAAAAAOAAcAAQAAAAAAAAAPAAcAAQAAAAAAAAAQAAcAAQAOAAAAAADx/wIAAQAAAAAAAADz/wIAAQAPAAIAAAD0/wIAAQAHAAoAAAD1/wIAAQAIAAoAAAD1/wEAAQAIAAoAAAD2/wEAAQAAAAAAAAD3/wEAAQAPAAEAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQASAAEAAAD9/wIAAQASAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQASAAAAAAABAAIAAQAHAAwAAAACAAIAAQAAAAAAAAADAAIAAQAQAAAAAAAEAAIAAQAAAAAAAAAEAAEAAQAIAAsAAAAFAAEAAQAJAAsAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQASAAEAAAAKAAIAAQASAAAAAAALAAIAAQASAAEAAAAMAAIAAQASAAEAAAANAAIAAQANAAEAAAAOAAIAAQANAAEAAAAIAAIAAQAAAAAAAAAHAAIAAQARAAAAAAAGAAIAAQARAAAAAAAFAAIAAQAJAAwAAAD7/wIAAQAAAAAAAAD6/wIAAQARAAAAAAD5/wIAAQAQAAAAAAD4/wIAAQANAAEAAAD3/wIAAQAOAAEAAAD2/wIAAQAJAAoAAAD0/wEAAQAAAAAAAADz/wEAAQAPAAEAAADy/wEAAQAAAAAAAADy/wAAAQAAAAAAAADx/wAAAQAAAAAAAADx////AQAAAAAAAADx//7/AQAAAAAAAADx/wEAAQAAAAAAAADx//3/AQAAAAAAAADx//z/AQAAAAAAAADx//v/AQAAAAAAAADx//r/AQAAAAAAAADx//n/AQAAAAAAAADx//j/AQAAAAAAAADy//j/AQAAAAAAAADy//n/AQAAAAAAAADy//r/AQAAAAAAAADy//v/AQAAAAAAAADy//z/AQAAAAAAAADy//3/AQAAAAAAAADy//7/AQAAAAAAAADy////AQAAAAAAAADz/wAAAQAOAAAAAAD0/wAAAQAAAAAAAAD1/wAAAQAIAAoAAAD2/wAAAQAAAAAAAAD3/wAAAQAPAAAAAAD4/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAANAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAADAAEAAQAIAAsAAAACAAEAAQAIAAsAAAABAAEAAQAHAAsAAAAAAAEAAQAAAAAAAAD//wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD9/wEAAQAAAAAAAADz//j/AQAAAAAAAAD0//j/AQAAAAAAAAD1//j/AQAAAAAAAAD2//j/AQAAAAAAAAD3//j/AQAAAAAAAAD4//j/AQAAAAAAAAD5//j/AQAAAAAAAAD6//j/AQAAAAAAAAD7//j/AQAAAAAAAAD8//j/AQAAAAAAAAD9//j/AQAAAAAAAAD+//j/AQAAAAAAAAD///j/AQAAAAAAAAAAAPj/AQAAAAAAAAABAPj/AQAAAAAAAAACAPj/AQAAAAAAAAADAPj/AQAAAAAAAAAEAPj/AQAAAAAAAAAFAPj/AQAAAAAAAAAGAPj/AQAAAAAAAAAHAPj/AQAAAAAAAAAIAPj/AQAAAAAAAAAJAPj/AQAAAAAAAAAKAPj/AQAAAAAAAAALAPj/AQAAAAAAAAAMAPj/AQAAAAAAAAANAPj/AQAAAAAAAAAOAPj/AQAAAAAAAAAOAPn/AQAAAAAAAAAOAPr/AQAAAAAAAAAOAPv/AQAAAAAAAAAOAPz/AQAAAAAAAAAOAP3/AQAAAAAAAAAOAP7/AQAAAAAAAAANAP7/AQAAAAAAAAANAP//AQAAAAAAAAAMAP//AQAAAAAAAAALAP//AQAAAAAAAAAKAP//AQAAAAAAAAAJAP//AQAAAAAAAAAIAP//AQAAAAAAAAAHAP//AQAAAAAAAAAGAP//AQAAAAAAAAAFAP//AQAAAAAAAAAEAP//AQAAAAAAAAADAP//AQAAAAAAAAACAP//AQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD+////AQAAAAAAAAD9////AQAAAAAAAAD8////AQAAAAAAAAD7////AQAAAAAAAAD6////AQAAAAAAAAD5////AQAAAAAAAAD4////AQAAAAAAAAD3////AQAAAAAAAAD2////AQAAAAAAAAD1////AQAIAAoAAAD0////AQAAAAAAAADz////AQAAAAAAAADz//7/AQAHAAkAAADz//3/AQAAAAAAAADz//z/AQAAAAAAAADz//v/AQAAAAAAAADz//r/AQAAAAAAAADz//n/AQAAAAAAAAD0//n/AQAAAAAAAAD0//r/AQAAAAAAAAD0//v/AQAAAAAAAAD0//z/AQAAAAAAAAD0//3/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAIAAoAAAD2//7/AQAJAAkAAAD3//7/AQAJAAkAAAD4//7/AQAJAAkAAAD5//7/AQAAAAAAAAD6//7/AQAAAAAAAAD7//7/AQAAAAAAAAD8//7/AQAAAAAAAAD9//7/AQAAAAAAAAD+//7/AQAAAAAAAAD///7/AQAAAAAAAAAAAP7/AQAAAAAAAAABAP7/AQAAAAAAAAACAP7/AQAAAAAAAAADAP7/AQAAAAAAAAAEAP7/AQAAAAAAAAAFAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAHAP7/AQAAAAAAAAAIAP7/AQAAAAAAAAAJAP7/AQAAAAAAAAAKAP7/AQAAAAAAAAALAP7/AQAAAAAAAAAMAP7/AQAAAAAAAAANAP3/AQAAAAAAAAAMAP3/AQAAAAAAAAALAP3/AQAAAAAAAAAKAP3/AQAAAAAAAAAJAP3/AQAAAAAAAAAIAP3/AQAAAAAAAAAHAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAFAP3/AQAAAAAAAAAEAP3/AQAAAAAAAAADAP3/AQAAAAAAAAACAP3/AQAAAAAAAAABAP3/AQAAAAAAAAAAAP3/AQAAAAAAAAD///3/AQAAAAAAAAD+//3/AQAAAAAAAAD9//3/AQAAAAAAAAD8//3/AQAAAAAAAAD7//3/AQAAAAAAAAD6//3/AQAAAAAAAAD5//3/AQAAAAAAAAD4//3/AQAFAAkAAAD3//3/AQAAAAAAAAD2//3/AQAAAAAAAAD0//7/AQAHAAkAAAD1//v/AQAAAAAAAAD1//r/AQAAAAAAAAD1//n/AQAAAAAAAAD1//z/AQAAAAAAAAD2//n/AQAAAAAAAAD3//n/AQAAAAAAAAD4//n/AQAAAAAAAAD5//n/AQAAAAAAAAD6//n/AQAAAAAAAAD7//n/AQAAAAAAAAD8//n/AQAAAAAAAAD9//n/AQAAAAAAAAD+//n/AQAAAAAAAAD///n/AQAAAAAAAAAAAPn/AQAAAAAAAAABAPn/AQAAAAAAAAACAPn/AQAAAAAAAAADAPn/AQAAAAAAAAAEAPn/AQAAAAAAAAAFAPn/AQAAAAAAAAAGAPn/AQAAAAAAAAAHAPn/AQAAAAAAAAAIAPn/AQAAAAAAAAAJAPn/AQAAAAAAAAAKAPn/AQAAAAAAAAALAPn/AQAAAAAAAAAMAPn/AQAAAAAAAAANAPn/AQAAAAAAAAANAPv/AQAAAAAAAAANAPz/AQAAAAAAAAAMAPz/AQAAAAAAAAALAPz/AQAAAAAAAAAKAPz/AQAAAAAAAAAJAPz/AQAAAAAAAAAIAPz/AQAAAAAAAAAHAPz/AQAAAAAAAAAGAPz/AQAAAAAAAAADAPz/AQAAAAAAAAACAPz/AQAAAAAAAAABAPz/AQAAAAAAAAAAAPz/AQAAAAAAAAD///z/AQAAAAAAAAD+//z/AQAAAAAAAAD9//z/AQAAAAAAAAD8//z/AQAAAAAAAAD7//z/AQAAAAAAAAD6//z/AQAAAAAAAAD5//z/AQAAAAAAAAD4//z/AQAAAAAAAAD3//z/AQAAAAAAAAD2//z/AQAAAAAAAAD2//v/AQAAAAAAAAD2//r/AQAAAAAAAAD3//r/AQAAAAAAAAD4//r/AQAAAAAAAAD5//r/AQAAAAAAAAD6//r/AQAAAAAAAAD7//r/AQAAAAAAAAD8//r/AQAAAAAAAAD9//r/AQAAAAAAAAD+//r/AQAAAAAAAAD///r/AQAAAAAAAAAAAPr/AQAAAAAAAAABAPr/AQAAAAAAAAACAPr/AQAAAAAAAAADAPr/AQAAAAAAAAAEAPr/AQAAAAAAAAAFAPr/AQAAAAAAAAAGAPr/AQAAAAAAAAAHAPr/AQAAAAAAAAAIAPr/AQAAAAAAAAAJAPr/AQAAAAAAAAAKAPr/AQAAAAAAAAAKAPv/AQAAAAAAAAALAPv/AQAAAAAAAAAMAPv/AQAAAAAAAAAMAPr/AQAAAAAAAAANAPr/AQAAAAAAAAALAPr/AQAAAAAAAAAJAPv/AQAAAAAAAAAIAPv/AQAAAAAAAAAHAPv/AQAAAAAAAAAGAPv/AQAAAAAAAAADAPv/AQAAAAAAAAACAPv/AQAAAAAAAAABAPv/AQAAAAAAAAAAAPv/AQAAAAAAAAD///v/AQAAAAAAAAD+//v/AQAAAAAAAAD9//v/AQAAAAAAAAD8//v/AQAAAAAAAAD7//v/AQAAAAAAAAD6//v/AQAAAAAAAAD5//v/AQAAAAAAAAD4//v/AQAAAAAAAAD3//v/AQAAAAAAAAAOAP//AQAAAAAAAAD3/wgAAQAAAAAAAAD4/wgAAQAAAAAAAAD//wgAAQAAAAAAAAAAAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAOAAgAAQARAAAAAAD0/wgAAQAAAAAAAAD1/wgAAQAAAAAAAAD8/wgAAQAAAAAAAAADAAgAAQAAAAAAAAAKAAgAAQAAAAAAAADy/wIAAQASAAEAAAAEAPv/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAPv/AQAAAAAAAAA=")
tile_set = ExtResource("1_n0frr")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="ObservationButtons" type="Node2D" parent="."]

[node name="ObservationButton1" parent="ObservationButtons" instance=ExtResource("5_m6boq")]
position = Vector2(-96, 41)
scale = Vector2(0.5, 0.5)

[node name="ObservationButton2" parent="ObservationButtons" instance=ExtResource("5_m6boq")]
position = Vector2(-40, 41)
scale = Vector2(0.5, 0.5)

[node name="ObservationButton3" parent="ObservationButtons" instance=ExtResource("5_m6boq")]
position = Vector2(16, 41)
scale = Vector2(0.5, 0.5)

[node name="ObservationButton4" parent="ObservationButtons" instance=ExtResource("5_m6boq")]
position = Vector2(72, 41)
scale = Vector2(0.5, 0.5)

[node name="QuestionLabel" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -55.0
offset_right = 114.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_ryn2k")
theme_override_font_sizes/font_size = 32
text = "How many 
were there?"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_hrh6m")

[node name="ObservationTarget" parent="QuestionLabel" instance=ExtResource("3_j70ae")]
position = Vector2(109, 70)

[node name="CountdownLabel" parent="." instance=ExtResource("7_rbhsb")]
offset_top = -32.5
offset_bottom = 32.5

[node name="LuckLabel" parent="." instance=ExtResource("8_etsfv")]
visible = false
offset_top = 35.0
offset_bottom = 58.0

[node name="Player" parent="." instance=ExtResource("2_6vnlc")]
position = Vector2(-118, 64)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TransitionTimer" type="Timer" parent="."]
